# fastapi-lms

./: .gitignore  alembic.ini  main.py  pyproject.toml
api/models/: courses.py  sections.py  users.py
api/routes/: courses.py  sections.py  users.py
database/: main.py
database/models/: courses_model.py  mixins.py  users.py  users_model.py
migrations/: env.py
migrations/data/: students.json
migrations/versions/: 3d9311087be6_.py
models/: users_models.py
