[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Noer Paanakker <noer@lightworksweb.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
